--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "python_app"
+name = "text_service"
 version = "0.1.0"
 description = ""
 authors = ["Robb Shecter <robb@public.law>"]
