--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -6,9 +6,12 @@ authors = ["Robb Shecter <robb@public.law>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+beautifulsoup4 = "^4.11.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
+black = {version = "^22.3.0", allow-prereleases = true}
+pytest-watch = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
