--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Robb Shecter <robb@public.law>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 beautifulsoup4 = "^4.11.1"
+fastapi = "^0.78.0"
+uvicorn = {extras = ["standard"], version = "^0.17.6"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
