--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Robb Shecter <robb@public.law>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "3.10.5"
 beautifulsoup4 = "^4.11.1"
 fastapi = "^0.78.0"
 uvicorn = {extras = ["standard"], version = "^0.17.6"}
